--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
-/Makefile
+*.byte
+*.native
 /_build
-/configure
-/api.docdir
-/setup.data
-/setup.log
-/setup.ml
-/lib/prime*.mldylib
+/doc/api.odocl
 /lib/prime*.mllib
-/testsuite.byte
+/prime.install
