--- a/prime.opam
+++ b/prime.opam
@@ -12,7 +12,7 @@ build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
 
 depends: [
   "jbuilder" {build}
-  "oUnit"
+  "ounit" {test}
   "topkg" {build}
   "topkg-jbuilder" {build}
 ]
